<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.takehomeevaluation.urlshortener.ui.components.UrlComponent
        android:id="@+id/original_url"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:urlLabel="@string/urlshortener_title_url" />

    <com.takehomeevaluation.urlshortener.ui.components.UrlComponent
        android:id="@+id/shortened_url"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/original_url"
        app:layout_constraintVertical_bias="0.0"
        app:urlLabel="@string/urlshortener_title_short" />

</androidx.constraintlayout.widget.ConstraintLayout>